--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
         </div>
         <div class="col-6">
           <h5 class="text-secondary p-2 m-2 " id="note"><br><br><br><br>
-              i`m Mohamed Gaber junior MERN full stack developer, i`m experienced with <br> (html-5,Css-3,Jquery,Bootstrap,MongoDB,Java Script,Js Next,UX sketching desigh),
+              i`m Mohamed Gaber junior MERN full stack developer, i`m experienced with <br> (html-5,Css-3,Jquery,Bootstrap,MongoDB,Java Script,Js Next,UX sketching design),
               i`m good self learner i learnt alot of courses by my self and joined ITI (MERN track) in August 2021, i worked on
-              landing pages , homa pages for websiter, and social media front end  <br><br><br><br><br>
+              landing pages , homa pages for websites, and social media front end  <br><br><br><br><br>
           </h5>
         </div>
     </div>
