--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
      <div class="col-4 text-center " id="work1">
          <h1 class=" m-auto p-5">Social Media  </h1>
        
-            <a href="Social media.html"> <div id="img4">
+            <a href="https://socialmedia222.netlify.app/"> <div id="img4">
 
             </div></a>
 
@@ -336,7 +336,7 @@
      </div>
      <div class="col-4 text-center" id="work2">
         <h1 class=" m-auto p-5">CV template</h1>
-       <a href="./CV/index.html" >
+       <a href="https://cvtemplate1.netlify.app/" >
         <div id="img6">
 
         </div>
@@ -345,7 +345,7 @@
      </div>
      <div class="col-4 text-center" id="work3">
         <h1 class=" m-auto p-5">Home Page</h1>
-       <a href="./home page/index.html" >
+       <a href="https://homepage122.netlify.app/" >
         <div id="img5">
 
         </div>
